# DepSolver

./: NewREADME.md  README.md  pyproject.toml
depsolver/: api_analyzer.py  cli.py  cve.py  git_integration.py  models.py  optimizer.py  parser.py  project.py  report.py  resolver.py  tests_runner.py  versions.py
depsolver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_blocked_upgrades.py  test_exact_pins.py  test_git_cache.py  test_html_accordion_and_transitive.py  test_import_fallback_and_cve_degradation.py  test_meeting_point.py  test_nested_symbols.py  test_new_features.py  test_parser.py  test_report_html.py  test_require_pin_as_floor.py  test_resolver_backtracking.py  test_symbol_reintroduced.py  test_version_window.py  test_versions.py
