[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "depsolver"
version = "0.1.0"
description = "Résolveur de dépendances Python sûres, récentes et API-compatibles"
requires-python = ">=3.9"
dependencies = [
    "packaging>=23.0",
    "requests>=2.28",
]

[project.scripts]
depsolver = "depsolver.cli:main"

[tool.setuptools.packages.find]
include = ["depsolver*"]
